logging/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logging-https
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: elasticsearch.logging.example.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: elasticsearch
              port:
                number: 9200
