logging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logging
  namespace: logging
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.logging.example.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: kibana
              port:
                number: 5601
